--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ text-decoration: none;
 
 /*SLIDER*/
 .slider_wrap{
-    height: 418px;
+    min-height: 418px;
 }
 .slider {
     margin-top:55px;
@@ -198,7 +198,82 @@ display:none;
 
 p.text {
     color: #5d5c5c;
-    padding: 80px 50px 0px 60px;
+    padding: 80px 50px 32px 60px;
     font-size: 20px;
     text-align: center;
 }
+
+.block {
+    float: left;
+    border-bottom: 2px dotted #5d5c5c;
+    min-height: 530px;
+    width: 660px;
+    margin-top: 38px;
+}
+
+.block img {
+    margin-right: 20px;
+    float: left;
+    padding-bottom: 15px;
+}
+
+.block h1 {
+    font-size: 33px;
+    font-family: 'Arial';
+    color: #6c6c6c;
+    line-height: 40px;
+}
+
+.date_soc {
+    width: 390px;
+    height: 70px;
+    background-color: #ededed;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.date_soc h3{
+    font-family: 'Arial';
+    font-size: 52px;
+    color: #6c6c6c;
+    font-weight: bold;
+    padding: 10px 10px 0px 10px;
+    float: left;
+}
+
+.post_head p{
+ padding-top: 10px;
+    font-size: 14px;
+    color: #6c6c6c;
+}
+.post_head p.tags{
+    display: inline;
+}
+
+.post_head a {
+    color: #ac4052;
+}
+
+.date_soc p{
+    font-size: 16px;
+    color: #6c6c6c;
+    padding-top: 5px;
+}
+
+.social a {
+    display: inline-block;
+    padding-right: 7px;
+    width: 40px;
+    height: 40px;
+    float: right;
+    opacity: 0.6;
+}
+
+.social a:hover{
+    opacity: 1;
+}
+
+.social{
+    padding-top: 14px;
+}
+
